# Lectic

./: .gitignore  .nojekyll  01_introduction.html  02_getting_started.html  03_conversation_format.html  03_editor_integration.html  04_configuration.html  04_conversation_format.html  05_configuration.html  05_providers_and_models.html  06_providers_and_models.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  flake.nix  index.html  install.sh  llms-full.md  package-lock.json  package.json  result  robots.txt  search.json  sitemap.xml  tsconfig.json
.hooks/: pre-commit
automation/: 01_macros.html  02_hooks.html  03_custom_subcommands.html
context_management/: 01_external_content.html  02_conversation_control.html  03_external_prompts.html
cookbook/: 01_coding_assistant.html  02_commit_messages.html  03_research_perspectives.html  04_memory.html  05_context_compaction.html  06_custom_sandboxing.html  07_control_flow_macros.html  08_skills_subcommand.html  09_structured_outputs.html  index.html
doc/: 01_introduction.qmd  02_getting_started.qmd  03_conversation_format.qmd  03_editor_integration.qmd  04_configuration.qmd  04_conversation_format.qmd  05_configuration.qmd  05_providers_and_models.qmd  06_providers_and_models.qmd  _quarto.yml  post_render.sh
extra/: bwrap-sandbox.sh  lectic-a2a-monitor.tsx  lectic-run.completion.bash  lectic-run.js  lectic-skills.ts  lectic-usage.completion.bash  lectic-usage.py  lectic.vim
nix/: lectic.nix  sqlite-vec.nix
reference/: 01_cli.html  02_configuration.html  03_lsp.html  04_structured_outputs.html  (+1 more)
(+326 files in other folders)
