[package]
name = "lectic"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
llm = { version = "1.0.4", features = ["anthropic"] }
nom = "8.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
yaml-rust = "0.4.5"
